most clustering references added

--- a/references.bib
+++ b/references.bib
@@ -2149,3 +2149,358 @@ url = {http://www.nature.com/doifinder/10.1038/nprot.2014.174},
 volume = {9},
 year = {2014}
 }
+
+@article{Kaplan1989,
+author = {Kaplan, Norman L and R., R and Hudson and Langley, C H},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kaplan et al. - 1989 - The hitch-hiking effect revisited.pdf:pdf},
+journal = {Genetics},
+pages = {887--899},
+title = {{The "hitch-hiking effect" revisited}},
+volume = {13},
+year = {1989}
+}
+
+@article{McVean2007,
+abstract = {The fixation of advantageous mutations by natural selection has a profound impact on patterns of linked neutral variation. While it has long been appreciated that such selective sweeps influence the frequency spectrum of nearby polymorphism, it has only recently become clear that they also have dramatic effects on local linkage disequilibrium. By extending previous results on the relationship between genealogical structure and linkage disequilibrium, I obtain simple expressions for the influence of a selective sweep on patterns of allelic association. I show that sweeps can increase, decrease, or even eliminate linkage disequilibrium (LD) entirely depending on the relative position of the selected and neutral loci. I also show the importance of the age of the neutral mutations in predicting their degree of association and describe the consequences of such results for the interpretation of empirical data. In particular, I demonstrate that while selective sweeps can eliminate LD, they generate patterns of genetic variation very different from those expected from recombination hotspots.},
+author = {McVean, Gil},
+doi = {10.1534/genetics.106.062828},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/McVean - 2007 - The structure of linkage disequilibrium around a selective sweep.pdf:pdf},
+issn = {0016-6731},
+journal = {Genetics},
+keywords = {Alleles,Computer Simulation,Genetic Variation,Linkage Disequilibrium,Linkage Disequilibrium: genetics,Models, Genetic,Mutation,Mutation: genetics,Selection, Genetic},
+month = {mar},
+number = {3},
+pages = {1395--406},
+pmid = {17194788},
+title = {{The structure of linkage disequilibrium around a selective sweep.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1840056{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {175},
+year = {2007}
+}
+
+@article{Coop2009,
+abstract = {Various observations argue for a role of adaptation in recent human evolution, including results from genome-wide studies and analyses of selection signals at candidate genes. Here, we use genome-wide SNP data from the HapMap and CEPH-Human Genome Diversity Panel samples to study the geographic distributions of putatively selected alleles at a range of geographic scales. We find that the average allele frequency divergence is highly predictive of the most extreme F(ST) values across the whole genome. On a broad scale, the geographic distribution of putatively selected alleles almost invariably conforms to population clusters identified using randomly chosen genetic markers. Given this structure, there are surprisingly few fixed or nearly fixed differences between human populations. Among the nearly fixed differences that do exist, nearly all are due to fixation events that occurred outside of Africa, and most appear in East Asia. These patterns suggest that selection is often weak enough that neutral processes -- especially population history, migration, and drift -- exert powerful influences over the fate and geographic distribution of selected alleles.},
+author = {Coop, Graham and Pickrell, Joseph K and Novembre, John and Kudaravalli, Sridhar and Li, Jun and Absher, Devin and Myers, Richard M and Cavalli-Sforza, Luigi Luca and Feldman, Marcus W and Pritchard, Jonathan K},
+doi = {10.1371/journal.pgen.1000500},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Coop et al. - 2009 - The role of geography in human adaptation.pdf:pdf},
+issn = {1553-7404},
+journal = {PLoS genetics},
+keywords = {Africa,Far East,Gene Frequency,Genetic Variation,Genetics, Population,Genome, Human,Genome-Wide Association Study,Geography,Haplotypes,Humans,Polymorphism, Single Nucleotide},
+mendeley-groups = {Selection/iHS},
+month = {jun},
+number = {6},
+pages = {e1000500},
+pmid = {19503611},
+title = {{The role of geography in human adaptation.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2685456{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {5},
+year = {2009}
+}
+
+@article{Nielsen2017,
+abstract = {Advances in the sequencing and the analysis of the genomes of both modern and ancient peoples have facilitated a number of breakthroughs in our understanding of human evolutionary history. These include the discovery of interbreeding between anatomically modern humans and extinct hominins; the development of an increasingly detailed description of the complex dispersal of modern humans out of Africa and their population expansion worldwide; and the characterization of many of the genetic adaptions of humans to local environmental conditions. Our interpretation of the evolutionary history and adaptation of humans is being transformed by analyses of these new genomic data.},
+author = {Nielsen, Rasmus and Akey, Joshua M. and Jakobsson, Mattias and Pritchard, Jonathan K. and Tishkoff, Sarah and Willerslev, Eske},
+doi = {10.1038/nature21347},
+file = {:home/murraycadzow/Dropbox/Papers/Nielsen{\_}et{\_}al-2017-Nature.pdf:pdf},
+isbn = {0028-0836},
+issn = {0028-0836},
+journal = {Nature},
+number = {7637},
+pages = {302--310},
+pmid = {28102248},
+title = {{Tracing the peopling of the world through genomics}},
+url = {http://www.nature.com/doifinder/10.1038/nature21347},
+volume = {541},
+year = {2017}
+}
+
+@article{Kivisild1999,
+abstract = {About a fifth of the human gene pool belongs largely either to Indo-European or Dravidic speaking people inhabiting the Indian peninsula. The ‘Caucasoid share' in their gene pool is thought to be related predominantly to the Indo-European speakers. A commonly held hypothesis, albeit not the only one, suggests a massive Indo-Aryan invasion to India some 4,000 years ago [1]. Recent limited analysis of maternally inherited mitochondrial DNA (mtDNA) of Indian populations has been interpreted as supporting this concept [2,3]. Here, this interpretation is questioned. We found an extensive deep late Pleistocene genetic link between contemporary Europeans and Indians, provided by the mtDNA haplogroup U, which encompasses roughly a fifth of mtDNA lineages of both populations. Our estimate for this split is close to the suggested time for the peopling of Asia and the first expansion of anatomically modern humans in Eurasia [4–8] and likely pre-dates their spread to Europe. Only a small fraction of the ‘Caucasoid-specific' mtDNA lineages found in Indian populations can be ascribed to a relatively recent admixture.},
+author = {Kivisild, T and Bamshad, M.J. and Kaldma, K and Metspalu, M. and Metspalu, E and Reidla, M and Laos, S. and Parik, J and Watkins, W.S. and Dixon, M.E. and Papiha, S.S. and Mastana, S.S. and Mir, M.R. and Ferak, V and Villems, R},
+doi = {10.1016/S0960-9822(00)80057-3},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0960982200800573-main.pdf:pdf},
+isbn = {0960-9822 (Print)$\backslash$r0960-9822 (Linking)},
+issn = {09609822},
+journal = {Current Biology},
+month = {nov},
+number = {22},
+pages = {1331--1334},
+pmid = {10574762},
+title = {{Deep common ancestry of Indian and western-Eurasian mitochondrial DNA lineages}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0960982200800573 http://www.sciencedirect.com/science/article/pii/S0960982200800573},
+volume = {9},
+year = {1999}
+}
+
+@article{Quintana-Murci1999,
+abstract = {The out-of-Africa scenario has hitherto provided little evidence for the precise route by which modern humans left Africa. Two major routes of dispersal have been hypothesized: one through North Africa into the Levant, documented by fossil remains, and one through Ethiopia along South Asia, for which little, if any, evidence exists. Mitochondrial DNA (mtDNA) can be used to trace maternal ancestry. The geographic distribution and variation of mtDNAs can be highly informative in defining potential range expansions and migration routes in the distant past. The mitochondrial haplogroup M, first regarded as an ancient marker of East-Asian origin, has been found at high frequency in India and Ethiopia, raising the question of its origin. (A haplogroup is a group of haplotypes that share some sequence variations.) Its variation and geographical distribution suggest that Asian haplogroup M separated from eastern-African haplogroup M more than 50,000 years ago. Two other variants (489C and 10873C) also support a single origin of haplogroup M in Africa. These findings, together with the virtual absence of haplogroup M in the Levant and its high frequency in the South-Arabian peninsula, render M the first genetic indicator for the hypothesized exit route from Africa through eastern Africa/western India. This was possibly the only successful early dispersal event of modern humans out of Africa.},
+author = {Quintana-Murci, L and Semino, O and Bandelt, H J and Passarino, G and McElreavey, K and Santachiara-Benerecetti, a S},
+doi = {10.1038/70550},
+file = {:home/murraycadzow/Dropbox/Papers/ng1299{\_}437.pdf:pdf},
+isbn = {1061-4036 (Print)$\backslash$r1061-4036 (Linking)},
+issn = {1061-4036},
+journal = {Nature genetics},
+number = {4},
+pages = {437--441},
+pmid = {10581031},
+title = {{Genetic evidence of an early exit of Homo sapiens sapiens from Africa through eastern Africa.}},
+volume = {23},
+year = {1999}
+}
+
+@article{Groucutt2015,
+author = {Groucutt, Huw S. and Petraglia, Michael D and Bailey, Geoff and Scerri, Eleanor M L and Parton, Ash and Clark-Balzan, Laine and Jennings, Richard P and Lewis, Laura and Blinkhorn, James and Drake, Nick A and Breeze, Paul S and Inglis, Robyn H and Dev{\`{e}}s, Maud H. and Meredith-Williams, Matthew and Boivin, Nicole and Thomas, Mark G and Scally, Aylwyn},
+doi = {10.1002/evan.21455},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Groucutt et al. - 2015 - Rethinking the Dispersal of Homo sapiens out of Africa.pdf:pdf},
+issn = {10601538},
+journal = {Evolutionary Anthropology: Issues, News, and Reviews},
+keywords = {c 2015 wiley periodicals,demography,dispersal,genetic ancestry,homo sapiens,inc,paleolithic},
+month = {jul},
+number = {4},
+pages = {149--164},
+title = {{Rethinking the dispersal of Homo sapiens out of Africa}},
+url = {http://doi.wiley.com/10.1002/evan.21455},
+volume = {24},
+year = {2015}
+}
+
+@article{Matisoo-Smith2015,
+author = {Matisoo-Smith, Elizabeth},
+doi = {10.1016/j.jhevol.2014.10.017},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Matisoo-Smith - 2015 - Ancient DNA and the human settlement of the Pacific A review.pdf:pdf},
+issn = {00472484},
+journal = {Journal of Human Evolution},
+month = {feb},
+pages = {93--104},
+title = {{Ancient DNA and the human settlement of the Pacific: A review}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0047248414002632},
+volume = {79},
+year = {2015}
+}
+
+@article{Skoglund2016,
+author = {Skoglund, Pontus and Posth, Cosimo and Sirak, Kendra and Spriggs, Matthew and Valentin, Frederique and Bedford, Stuart and Clark, Geoffrey R. and Reepmeyer, Christian and Petchey, Fiona and Fernandes, Daniel and Fu, Qiaomei and Harney, Eadaoin and Lipson, Mark and Mallick, Swapan and Novak, Mario and Rohland, Nadin and Stewardson, Kristin and Abdullah, Syafiq and Cox, Murray P. and Friedlaender, Fran{\c{c}}oise R. and Friedlaender, Jonathan S. and Kivisild, Toomas and Koki, George and Kusuma, Pradiptajati and Merriwether, D. Andrew and Ricaut, Francois-X. and Wee, Joseph T. S. and Patterson, Nick and Krause, Johannes and Pinhasi, Ron and Reich, David},
+doi = {10.1038/nature19844},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Skoglund et al. - 2016 - Genomic insights into the peopling of the Southwest Pacific.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Skoglund et al. - 2016 - Genomic insights into the peopling of the Southwest Pacific(2).pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+keywords = {Polynesian,migration},
+mendeley-groups = {Migration},
+mendeley-tags = {Polynesian,migration},
+number = {7626},
+pages = {510--513},
+pmid = {27698418},
+publisher = {Nature Publishing Group},
+title = {{Genomic insights into the peopling of the Southwest Pacific}},
+url = {http://www.nature.com/doifinder/10.1038/nature19844},
+volume = {538},
+year = {2016}
+}
+
+@article{Duggan2014,
+author = {Duggan, Ana T and Stoneking, Mark},
+doi = {10.1016/j.gde.2014.06.010},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Duggan, Stoneking - 2014 - Recent developments in the genetic history of East Asia and Oceania.pdf:pdf},
+issn = {0959437X},
+journal = {Current Opinion in Genetics {\&} Development},
+pages = {9--14},
+publisher = {Elsevier Ltd},
+title = {{Recent developments in the genetic history of East Asia and Oceania}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0959437X1400063X},
+volume = {29},
+year = {2014}
+}
+
+@book{MatisooSmith2012highway,
+author = {Matisoo-Smith, Elizabeth},
+booktitle = {Causes and consequences of human migration: an evolutionary perspective},
+chapter = {19},
+editor = {Crawford, Michael H and Campbell, Benjamin C},
+file = {:home/murraycadzow/Dropbox/Papers/Crawford 2012 Migration chapter 19.pdf:pdf},
+pages = {388--416},
+publisher = {Cambridge University Press, New York},
+title = {{On the great blue highway: Human migration in the Pacific}},
+year = {2012}
+}
+
+@article{Barcham2009,
+abstract = {For many Polynesians migration is still framed within a particular spatial context, although on an enlarged scale – one that we have termed the New Polynesian Triangle. With its apexes in the North American continent to the east, Australia in the west and New Zealand in the south, this New Polynesian Triangle encompasses a particular field through which ongoing Polynesian migration and movement continues to occur. Movement within this New Polynesian Triangle is both multidimensional and multidirectional. While it is the movement of economic resources, particularly remittances, that has captured the interest of many agencies operating in the region, we argue that such economic flows are integrally linked with other flows – of goods, ideas, skills and culture – to form a single dynamic system of movement. Importantly, such flows are not uni-directional (from ‘rich' to ‘poor' countries) as was assumed in times past. In developing ideas on the New Polynesian Triangle, we wish to move away from the dominant Western discourse of the Pacific Ocean as a barrier to development and movement and towards the reclamation of the ocean as a conduit and source of connection and movement for Pacific peoples.},
+author = {Barcham, Manuhuia and Scheyvens, Regina and Overton, John},
+doi = {10.1111/j.1467-8373.2009.01404.x},
+file = {:home/murraycadzow/Dropbox/Papers/Barcham{\_}et{\_}al-2009-Asia{\_}Pacific{\_}Viewpoint-1.pdf:pdf},
+isbn = {1467-8373},
+issn = {13607456},
+journal = {Asia Pacific Viewpoint},
+keywords = {Development,Migration,Pacific,Polynesian,Post-national},
+number = {3},
+pages = {322--337},
+title = {{New Polynesian triangle: Rethinking Polynesian migration and development in the Pacific}},
+volume = {50},
+year = {2009}
+}
+
+@article{Hollis-Moffatt2012,
+abstract = {INTRODUCTION:Two major gout-causing genes have been identified, the urate transport genes SLC2A9 and ABCG2. Variation within the SLC17A1 locus, which encodes sodium-dependent phosphate transporter 1, a renal transporter of uric acid, has also been associated with serum urate concentration. However, evidence for association with gout is equivocal. We investigated the association of the SLC17A1 locus with gout in New Zealand sample sets.METHODS:Five variants (rs1165196, rs1183201, rs9358890, rs3799344, rs12664474) were genotyped across a New Zealand sample set totaling 971 cases and 1,742 controls. Cases were ascertained according to American Rheumatism Association criteria. Two population groups were studied: Caucasian and Polynesian.RESULTS:At rs1183201 (SLC17A1), evidence for association with gout was observed in both the Caucasian (odds ratio (OR) = 0.67, P = 3.0 x 10-6) and Polynesian (OR = 0.74, P = 3.0 x 10-3) groups. Meta-analysis confirmed association of rs1183201 with gout at a genome-wide level of significance (OR = 0.70, P = 3.0 x 10-8). Haplotype analysis suggested the presence of a common protective haplotype.CONCLUSION:We confirm the SLC17A1 locus as the third associated with gout at a genome-wide level of significance.},
+author = {Hollis-Moffatt, Jade and Phipps-Green, Amanda and Chapman, Brett and Jones, Gregory and van Rij, Andre and Gow, Peter and Harrison, Andrew and Highton, John and Jones, Peter and Montgomery, Grant and Stamp, Lisa and Dalbeth, Nicola and Merriman, Tony},
+doi = {10.1186/ar3816},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hollis-Moffatt et al. - 2012 - The renal urate transporter SLC17A1 locus confirmation of association with gout.pdf:pdf},
+issn = {1478-6354},
+journal = {Arthritis Research {\&} Therapy},
+mendeley-groups = {PPARGC1Apaper,Metabolic Syndrome/Gout},
+number = {2},
+pages = {R92},
+title = {{The renal urate transporter SLC17A1 locus: confirmation of association with gout}},
+url = {http://arthritis-research.com/content/14/2/R92},
+volume = {14},
+year = {2012}
+}
+
+@article{Zhang2013a,
+abstract = {It has recently been hypothesized that polygenic adaptation, resulting in modest allele frequency changes at many loci, could be a major mechanism behind the adaptation of complex phenotypes in human populations. Here we leverage the large number of variants that have been identified through genome-wide association (GWA) studies to comprehensively study signatures of natural selection on genetic variants associated with complex traits. Using population differentiation based methods, such as FST and phylogenetic branch length analyses, we systematically examined nearly 1300 SNPs associated with 38 complex phenotypes. Instead of detecting selection signatures at individual variants, we aimed to identify combined evidence of natural selection by aggregating signals across many trait associated SNPs. Our results have revealed some general features of polygenic selection on complex traits associated variants. First, natural selection acting on standing variants associated with complex traits is a common phenomenon. Second, characteristics of selection for different polygenic traits vary both temporarily and geographically. Third, some studied traits (e.g. height and urate level) could have been the primary targets of selection, as indicated by the significant correlation between the effect sizes and the estimated strength of selection in the trait associated variants; however, for most traits, the allele frequency changes in trait associated variants might have been driven by the selection on other correlated phenotypes. Fourth, the changes in allele frequencies as a result of selection can be highly stochastic, such that, polygenic adaptation may accelerate differentiation in allele frequencies among populations, but generally does not produce predictable directional changes. Fifth, multiple mechanisms (pleiotropy, hitchhiking, etc) may act together to govern the changes in allele frequencies of genetic variants associated with complex traits. {\textcopyright} 2013 The Authors.},
+author = {Zhang, Ge and Muglia, Louis J. and Chakraborty, Ranajit and Akey, Joshua M. and Williams, Scott M.},
+doi = {10.1016/j.atg.2013.10.002},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zhang et al. - 2013 - Signatures of natural selection on genetic variants affecting complex human traits.pdf:pdf},
+issn = {22120661},
+journal = {Applied and Translational Genomics},
+keywords = {,Complex traits,Genome-wide association,Natural selection,Polygenic adaptation},
+mendeley-groups = {Selection},
+pages = {77--93},
+publisher = {The Authors},
+title = {{Signatures of natural selection on genetic variants affecting complex human traits}},
+url = {http://dx.doi.org/10.1016/j.atg.2013.10.002},
+volume = {2},
+year = {2013}
+}
+
+@article{Gosling2014,
+abstract = {Pacific Island populations, particularly those of Polynesian descent, have a high prevalence of hyperuricaemia and gout. This is due to an inherently higher urate level among these populations with a demonstrated genetic predisposition. While an excess of urate can cause pathology, urate is also important for human health. It has been implicated as an antioxidant, has a neuroprotective role and is involved in innate immune responses. This paper provides a brief review of urate levels worldwide, with a particular focus on island Southeast Asia and the Pacific. We then present possible evolutionary explanations for the elevated serum urate levels among Pacific populations in the context of the physiological importance of urate and of the settlement history of the region. Finally, we propose that ancestry may play a significant role in hyperuricaemia in these populations and that exposure to malaria prior to population expansion into the wider Pacific may have driven genetic selection for variants contributing to high serum urate.},
+author = {Gosling, Anna L and Matisoo-Smith, Elizabeth and Merriman, Tony R},
+doi = {10.1007/s00296-013-2922-x},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gosling, Matisoo-Smith, Merriman - 2014 - Hyperuricaemia in the Pacific why the elevated serum urate levels.pdf:pdf},
+issn = {1437-160X},
+journal = {Rheumatology international},
+keywords = {hyperuricaemia,islanders,malaria,migration,pacific,selection,serum urate},
+month = {jun},
+number = {6},
+pages = {743--57},
+pmid = {24378761},
+title = {{Hyperuricaemia in the Pacific: why the elevated serum urate levels?}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24378761},
+volume = {34},
+year = {2014}
+}
+
+@article{Mallick2016,
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Mallick, Swapan and Li, Heng and Lipson, Mark and Mathieson, Iain and Gymrek, Melissa and Racimo, Fernando and Zhao, Mengyao and Chennagiri, Niru and Nordenfelt, Susanne and Tandon, Arti and Skoglund, Pontus and Lazaridis, Iosif and Sankararaman, Sriram and Fu, Qiaomei and Rohland, Nadin and Renaud, Gabriel and Erlich, Yaniv and Willems, Thomas and Gallo, Carla and Spence, Jeffrey P. and Song, Yun S. and Poletti, Giovanni and Balloux, Francois and van Driem, George and de Knijff, Peter and Romero, Irene Gallego and Jha, Aashish R. and Behar, Doron M. and Bravi, Claudio M. and Capelli, Cristian and Hervig, Tor and Moreno-Estrada, Andres and Posukh, Olga L. and Balanovska, Elena and Balanovsky, Oleg and Karachanak-Yankova, Sena and Sahakyan, Hovhannes and Toncheva, Draga and Yepiskoposyan, Levon and Tyler-Smith, Chris and Xue, Yali and Abdullah, M. Syafiq and Ruiz-Linares, Andres and Beall, Cynthia M. and {Di Rienzo}, Anna and Jeong, Choongwon and Starikovskaya, Elena B. and Metspalu, Ene and Parik, J?ri and Villems, Richard and Henn, Brenna M. and Hodoglugil, Ugur and Mahley, Robert and Sajantila, Antti and Stamatoyannopoulos, George and Wee, Joseph T. S. and Khusainova, Rita and Khusnutdinova, Elza and Litvinov, Sergey and Ayodo, George and Comas, David and Hammer, Michael F. and Kivisild, Toomas and Klitz, William and Winkler, Cheryl A. and Labuda, Damian and Bamshad, Michael and Jorde, Lynn B. and Tishkoff, Sarah A. and Watkins, W. Scott and Metspalu, Mait and Dryomov, Stanislav and Sukernik, Rem and Singh, Lalji and Thangaraj, Kumarasamy and P??bo, Svante and Kelso, Janet and Patterson, Nick and Reich, David},
+doi = {10.1038/nature18964},
+eprint = {NIHMS150003},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(2).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(3).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(4).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(5).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(6).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(7).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(8).pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mallick et al. - 2016 - The Simons Genome Diversity Project 300 genomes from 142 diverse populations(9).pdf:pdf},
+isbn = {0008-5472 (Print)$\backslash$r0008-5472 (Linking)},
+issn = {0028-0836},
+journal = {Nature},
+month = {sep},
+number = {7624},
+pages = {201--206},
+pmid = {11507039},
+title = {{The Simons Genome Diversity Project: 300 genomes from 142 diverse populations}},
+url = {http://www.nature.com/doifinder/10.1038/nature18964},
+volume = {538},
+year = {2016}
+}
+
+@article{Pfeifer2014,
+abstract = {Although many computer programs can perform population genetics calculations, they are typically limited in the analyses and data input formats they offer; few applications can process the large data sets produced by whole-genome resequencing projects. Furthermore, there is no coherent framework for the easy integration of new statistics into existing pipelines, hindering the development and application of new population genetics and genomics approaches. Here, we present PopGenome, a population genomics package for the R software environment (a de facto standard for statistical analyses). PopGenome can efficiently process genome-scale data as well as large sets of individual loci. It reads DNA alignments and single-nucleotide polymorphism (SNP) data sets in most common formats, including those used by the HapMap, 1000 human genomes, and 1001 Arabidopsis genomes projects. PopGenome also reads associated annotation files in GFF format, enabling users to easily define regions or classify SNPs based on their annotation; all analyses can also be applied to sliding windows. PopGenome offers a wide range of diverse population genetics analyses, including neutrality tests as well as statistics for population differentiation, linkage disequilibrium, and recombination. PopGenome is linked to Hudson's MS and Ewing's MSMS programs to assess statistical significance based on coalescent simulations. PopGenome's integration in R facilitates effortless and reproducible downstream analyses as well as the production of publication-quality graphics. Developers can easily incorporate new analyses methods into the PopGenome framework. PopGenome and R are freely available from CRAN (http://cran.r-project.org/) for all major operating systems under the GNU General Public License.},
+author = {Pfeifer, Bastian and Wittelsb{\"{u}}rger, Ulrich and Ramos-Onsins, Sebastian E and Lercher, Martin J},
+doi = {10.1093/molbev/msu136},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pfeifer et al. - 2014 - PopGenome An Efficient Swiss Army Knife for Population Genomic Analyses in R.pdf:pdf},
+issn = {1537-1719},
+journal = {Molecular biology and evolution},
+month = {may},
+pmid = {24739305},
+title = {{PopGenome: An Efficient Swiss Army Knife for Population Genomic Analyses in R.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24739305},
+year = {2014}
+}
+
+@article{Szpiech2014,
+abstract = {Haplotype-based scans to detect natural selection are useful to identify recent or ongoing positive selection in genomes. As both real and simulated genomic data sets grow larger, spanning thousands of samples and millions of markers, there is a need for a fast and efficient implementation of these scans for general use. Here, we present selscan, an efficient multithreaded application that implements Extended Haplotype Homozygosity (EHH), Integrated Haplotype Score (iHS), and Cross-population EHH (XPEHH). selscan accepts phased genotypes in multiple formats, including TPED, and performs extremely well on both simulated and real data and over an order of magnitude faster than existing available implementations. It calculates iHS on chromosome 22 (22,147 loci) across 204 CEU haplotypes in 353 s on one thread (33 s on 16 threads) and calculates XPEHH for the same data relative to 210 YRI haplotypes in 578 s on one thread (52 s on 16 threads). Source code and binaries (Windows, OSX, and Linux) are available at https://github.com/szpiech/selscan.},
+archivePrefix = {arXiv},
+arxivId = {1403.6854},
+author = {Szpiech, Z A and Hernandez, R D},
+doi = {10.1093/molbev/msu211},
+eprint = {1403.6854},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Szpiech, Hernandez - 2014 - selscan an efficient multithreaded program to perform EHH-based scans for positive selection.pdf:pdf},
+isbn = {1537-1719 (Electronic)$\backslash$r0737-4038 (Linking)},
+issn = {1537-1719},
+journal = {Mol Biol Evol},
+keywords = {*Haplotypes,*Software,Algorithms,Chromosomes, Human, Pair 22/*genetics,Genome,Humans,Selection, Genetic},
+number = {10},
+pages = {2824--2827},
+pmid = {25015648},
+title = {{selscan: an efficient multithreaded program to perform EHH-based scans for positive selection}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25015648{\%}5Cnhttp://mbe.oxfordjournals.org/content/31/10/2824.full.pdf},
+volume = {31},
+year = {2014}
+}
+
+@article{Cadzow2014,
+author = {Cadzow, Murray and Boocock, James and Nguyen, Hoang T. and Wilcox, Phillip and Merriman, Tony R. and Black, Michael A.},
+doi = {10.3389/fgene.2014.00293},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cadzow et al. - 2014 - A bioinformatics workflow for detecting signatures of selection in genomic data.pdf:pdf},
+issn = {1664-8021},
+journal = {Frontiers in Genetics},
+keywords = {an,analysis pipeline,genome-wide,genomics,signatures of selection},
+mendeley-groups = {PPARGC1Apaper,Clustering},
+month = {aug},
+number = {August},
+pages = {1--8},
+title = {{A bioinformatics workflow for detecting signatures of selection in genomic data}},
+url = {http://www.frontiersin.org/Bioinformatics{\_}and{\_}Computational{\_}Biology/10.3389/fgene.2014.00293/abstract},
+volume = {5},
+year = {2014}
+}
+
+@article{MacArthur2017,
+abstract = {The NHGRI-EBI GWAS Catalog has provided data from published genome-wide association studies since 2008. In 2015, the database was redesigned and relocated to EMBL-EBI. The new infrastructure includes a new graphical user interface (www.ebi.ac.uk/gwas/), ontology supported search functionality and an improved curation interface. These developments have improved the data release frequency by increasing automation of curation and providing scaling improvements. The range of available Catalog data has also been extended with structured ancestry and recruitment information added for all studies. The infrastructure improvements also support scaling for larger arrays, exome and sequencing studies, allowing the Catalog to adapt to the needs of evolving study design, genotyping technologies and user needs in the future.},
+author = {MacArthur, Jacqueline and Bowler, Emily and Cerezo, Maria and Gil, Laurent and Hall, Peggy and Hastings, Emma and Junkins, Heather and McMahon, Aoife and Milano, Annalisa and Morales, Joannella and MayPendlington, Zoe and Welter, Danielle and Burdett, Tony and Hindorff, Lucia and Flicek, Paul and Cunningham, Fiona and Parkinson, Helen},
+doi = {10.1093/nar/gkw1133},
+file = {:home/murraycadzow/Dropbox/Papers/gkw1133.pdf:pdf},
+isbn = {13624962 (Electronic)},
+issn = {13624962},
+journal = {Nucleic Acids Research},
+number = {D1},
+pages = {D896--D901},
+pmid = {27899670},
+title = {{The new NHGRI-EBI Catalog of published genome-wide association studies (GWAS Catalog)}},
+volume = {45},
+year = {2017}
+}
+
+@article{Fu1993,
+abstract = {Mutations in the genealogy of the sequences in a random sample from a population can be classified as external and internal. External mutations are mutations that occurred in the external branches and internal mutations are mutations that occurred in the internal branches of the genealogy. Under the assumption of selective neutrality, the expected number of external mutations is equal to theta = 4Ne mu, where Ne is the effective population size and mu is the rate of mutation per gene per generation. Interestingly, this expectation is independent of the sample size. The number of external mutations is likely to deviate from its neutral expectation when there is selection while the number of internal mutations is less affected by the presence of selection. Statistical properties of the numbers of external mutations and of internal mutations are studied and their relationships to two commonly used estimates of theta are derived. From these properties, several new statistical tests based on a random sample of DNA sequences from the population are developed for testing the hypothesis that all mutations at a locus are neutral.},
+author = {Fu, Y. X. and Li, W. H.},
+doi = {evolution},
+file = {:home/murraycadzow/Dropbox/Papers/693.full.pdf:pdf},
+isbn = {0016-6731},
+issn = {0016-6731},
+journal = {Genetics},
+month = {mar},
+number = {3},
+pages = {693--709},
+pmid = {8454210},
+title = {{Statistical tests of neutrality of mutations.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/8454210 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1205353},
+volume = {133},
+year = {1993}
+}
+
+@Manual{dbscanref,
+    title = {dbscan: Density Based Clustering of Applications with Noise (DBSCAN) and
+Related Algorithms},
+    author = {Michael Hahsler and Matthew Piekenbrock},
+    year = {2017},
+    note = {R package version 1.1-1},
+    url = {https://CRAN.R-project.org/package=dbscan},
+  }
